# sqlgpt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
src/: constants.py
