[tool.poetry]
name = "sqlgpt"
version = "0.1.0"
description = "Translating natural language into a query and executing the query in a database"
authors = ["avisionh <a_vision@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
pre-commit = "^3.6.0"
detect-secrets = "^1.4.0"
langchain = "^0.1.4"
google-cloud-bigquery = "^3.17.1"
google-cloud-bigquery-storage = "^2.24.0"
sqlalchemy-bigquery = "^1.9.0"
langchain-community = "^0.0.16"
streamlit = "^1.36.0"
watchdog = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
